tests/frontend/fail/emptystorage/circular.act
contract LValue

constructor
interface constructor()

creates

    uint x := y
    uint y := x
    uint z := x
